--- a/stellenbosch_ee_report.tex
+++ b/stellenbosch_ee_report.tex
@@ -170,6 +170,9 @@
 \let\Oldparagraph\paragraph
 \renewcommand{\paragraph}{\Oldparagraph{} \noindent \hspace{5pt}}
 
+% Scale symbols
+\usepackage{scalerel}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
 
