Final editing and grammarly check for results chapter

--- a/exp_design/exp_design.tex
+++ b/exp_design/exp_design.tex
@@ -61,7 +61,7 @@
     \section{HITL} \label{sec:exp_design_hitl}
 
     \paragraph
-    MATLAB is used to generate a \gls{MPC} \gls{ROS} node 
+    MATLAB is used to generate an \gls{MPC} \gls{ROS} node 
     This \gls{ROS} node receives state feedback from the Gazebo simulator,
     computes the optimal control action,
     and sends the setpoint to PX4 through the package 'mavros'.
