Added publication page

--- a/stellenbosch_ee_report.tex
+++ b/stellenbosch_ee_report.tex
@@ -181,9 +181,10 @@
 % Front matter
 \input{frontmatter/masters_title_page}
 \pagenumbering{roman}
-% \input{frontmatter/acknowledgements}
-% \input{frontmatter/declaration}
-% \input{frontmatter/abstract}
+\input{frontmatter/acknowledgements}
+\input{frontmatter/declaration}
+\input{frontmatter/abstract}
+\input{frontmatter/publication}
 \tableofcontents
 
 \renewcommand{\listfigurename}{List of figures}
