--- a/stellenbosch_ee_report.tex
+++ b/stellenbosch_ee_report.tex
@@ -129,7 +129,7 @@
 \captionsetup[algorithm]{labelfont={bf,sf},font=small,labelsep=colon}
 
 % Bibliography
-\usepackage{cite}  % automatically reorder inline citations
+\usepackage[nocompress]{cite}  % automatically reorder inline citations
 \bibliographystyle{IEEEtran}
 % \usepackage[hyphens]{url}
 
