--- a/lit_study/lit_study.tex
+++ b/lit_study/lit_study.tex
@@ -94,6 +94,16 @@
     \subsection{Trajectory generation}
 
         \paragraph
+        Trajectory generation methods for suspended payload systems are often based on open-loop control techniques.
+        % A trajectory is calculated in which the multirotor motion induces as little oscillations as possible.
+        Input shaping is a common open-loop control method for minimal swing control of suspended payloads.
+        These techniques were originally designed for gantry systems with suspended payloads \cite{??}.
+        Later these input shaping techniques were also applied for minimal swing control of helicopter \cite{??} and multirotor \cite{??} systems transporting suspended payloads.
+        
+        \paragraph
+        Example of input shapers on multirotor system
+
+        \paragraph
         The main trajectory generation techniques include, 
         MPC,
         input shapers,
@@ -102,6 +112,12 @@
 
         Add cases from slabber and erasmus.
         Look for newer literature.
+
+        \paragraph
+        Slabber technique combo of input shape and active damping
+
+        \paragraph
+        MPC
 
 
     \subsection{Active-damping controllers}
@@ -113,7 +129,6 @@
     % ?? Lit study: include different types of \gls{MPC}, e.g. DMC, MAC
     % ?? different types of models \cite{}, 
     % ?? See \cite{Garcia1989} for good example of different implementations with different models
- 
 
 \section{System identification of a multirotor with an unknown suspended payload}
 
